--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
+    "stable": "webpack-dev-server --host stable.test --port 8090",
     "build": "npm run clean && webpack --config ./webpack.production.config.js --progress --profile --colors",
     "clean": "rimraf build/*",
     "stats": "webpack --config ./webpack.production.config.js --profile --json >stats.json"
@@ -54,9 +55,12 @@
     "react-hot-loader": "^3.0.0-beta.7",
     "react-i18next": "^4.6.0",
     "react-redux": "^5.0.5",
+    "react-redux-form": "^1.13.0",
     "react-router": "^3.0.5",
+    "react-router-redux": "^4.0.8",
     "react-transition-group": "^1.2.0",
     "redux": "^3.6.0",
+    "redux-form": "^7.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
